chore: exclude KeyVaultSecretsCheckPostProcessor from sonar